Series 27. Fixed wrong CSS relation in link tag of layout. Fixed <body> and <main> margin collapse.

--- a/public/app.css
+++ b/public/app.css
@@ -2,6 +2,7 @@ body {
     margin: auto;
     max-width: 600;
     font-family: sans-serif;
+    background: red;
 }
 
 p {
